add file data